--- a/.github/workflows/c-cpp-arm.yml
+++ b/.github/workflows/c-cpp-arm.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Print builder architecture
+      run: uname -m
     - name: Install dependencies
       run: |
         apt-get update
