--- a/.github/workflows/c-cpp-arm.yml
+++ b/.github/workflows/c-cpp-arm.yml
@@ -1,55 +1,36 @@
-name: C/C++ CI for ARM on QEMU
+name: CI
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
-  build:
+  qemu:
     runs-on: ubuntu-latest
-    container:
-      image: multiarch/debian-debootstrap:armhf-bookworm
-      options: --privileged
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Print builder architecture
-      run: uname -m
-    - name: Install dependencies
-      run: |
-        apt-get update
-        apt-get install -y libsdl2-dev libsdl2-image-dev libglib2.0-dev libcurl4-openssl-dev libgps-dev qemu-user-static
-        # Adjust installation commands if necessary for Debian Bookworm ARMhf
-    - name: Install SDL_gpu
-      run: |
-        git clone https://github.com/grimfang4/sdl-gpu.git sdl-gpu
-        cd sdl-gpu
-        cmake -G "Unix Makefiles"
-        make
-        make install
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY_CI }}" > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-    - name: Initialize and update git submodules
-      run: git submodule update --init --recursive
-    - name: Configure sdl-pcf
-      run: |
-        cd sdl-pcf
-        autoreconf -i
-        ./configure --with-texture=sdl_gpu
-    - name: Download and extract media
-      run: |
-        wget https://github.com/sam-itt/fg-roam/archive/media.tar.gz
-        tar -xf media.tar.gz --strip-components=1 -C fg-roam/
-    - name: Build
-      run: make
-    - name: Upload ARM binary
-      uses: actions/upload-artifact@v2
-      with:
-        name: sofis-linux-arm
-        path: ./sofis
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: debian/debian-bookworm-rpi4:latest
+          build-args: |
+            VERSION=bookworm
+            
+      - name: Run container
+        run: docker run --rm yourusername/debian-bookworm-rpi4:latest /bin/bash -c "/bin/bash"
