--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,47 +1,36 @@
-name: C/C++ CI
+name: CI
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
-  build:
+  qemu:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libsdl2-dev libsdl2-image-dev libglib2.0-dev libcurl4-openssl-dev libgps-dev
-        # Assuming SDL_gpu needs to be installed from source or an external repository
-        # For SDL_gpu, add the specific installation steps here. This might involve adding a PPA, downloading the source, and compiling.
-    - name: Install SDL_gpu
-      run: |
-        git clone https://github.com/grimfang4/sdl-gpu.git sdl-gpu
-        cd sdl-gpu
-        cmake -G "Unix Makefiles"
-        make
-        sudo make install
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
-        ssh-keyscan github.com >> ~/.ssh/known_hosts 
-    - name: Initialize and update git submodules
-      run: git submodule update --init --recursive
-    - name: Configure sdl-pcf
-      run: |
-        cd sdl-pcf
-        autoreconf -i
-        ./configure --with-texture=sdl_gpu
-        cd ..
-    - name: Download and extract media
-      run: |
-        wget https://github.com/sam-itt/fg-roam/archive/media.tar.gz
-        tar -xf media.tar.gz --strip-components=1 -C fg-roam/
-    - name: Build
-      run: make
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: yourusername/debian-bookworm-rpi4:latest
+          build-args: |
+            VERSION=bookworm
+            
+      - name: Run container
+        run: docker run --rm yourusername/debian-bookworm-rpi4:latest /bin/bash -c "command to run inside container"
