--- a/.github/workflows/c-cpp-arm.yml
+++ b/.github/workflows/c-cpp-arm.yml
@@ -1,36 +1,30 @@
-name: ARM CI for Raspberry Pi 4 Bookworm
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+name: Test architecture matrix
+on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        arch: [armv6l, armv7l, aarch64]
+        include:
+        - arch: armv6l
+          cpu: arm1176
+          base_image: raspios_lite:latest
+          cpu_info: raspberrypi_zero_w
+        - arch: armv7l
+          cpu: cortex-a7
+          base_image: raspios_lite:latest
+          cpu_info: raspberrypi_3b
+        - arch: aarch64
+          cpu: cortex-a53
+          base_image: raspios_lite_arm64:latest
+          cpu_info: raspberrypi_zero2_w_arm64_w
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Setup ARM emulation for Raspberry Pi 4 Bookworm
-      uses: pguyot/arm-runner-action@v2
+    - uses: pguyot/arm-runner-action@v2
       with:
-        base_image: raspi_4_bookworm:20230612
-        cpu: cortex-a53
-        cpu_info: cpuinfo/raspberrypi_4b
-        copy_repository_path: /opt/project
+        base_image: ${{ matrix.base_image }}
+        cpu: ${{ matrix.cpu }}
+        cpu_info: ${{ matrix.cpu_info }}
         commands: |
-          sudo apt-get update
-          sudo apt-get install -y libsdl2-dev libsdl2-image-dev libglib2.0-dev libcurl4-openssl-dev libgps-dev
-          # Clone and build SDL_gpu as an example of building a dependency from source
-          git clone https://github.com/grimfang4/sdl-gpu.git sdl-gpu
-          cd sdl-gpu
-          cmake -G "Unix Makefiles"
-          make
-          sudo make install
-          # Build your project here
-          cd /opt/project
-          # Assuming configure script is available
-          ./configure
-          make
+            test `uname -m` = ${{ matrix.arch }}
+            grep Model /proc/cpuinfo
