--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,11 +14,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Setup ARM emulation for Raspberry Pi 4 Bookworm
-      uses: pguyot/arm-runner-action@v2
+    - uses: pguyot/arm-runner-action@v2
       with:
-        base_image: raspi_4_bookworm:20230612
-        cpu: cortex-a53
-        cpu_info: cpuinfo/raspberrypi_4b
+        cpu: cortex-a7
+        cpu_info: cpuinfo/raspberrypi_3b # No specific cpuinfo for Pi 2, but this is compatible
+        base_image: raspios_lite:latest # Assuming use of latest 32-bit Raspberry Pi OS
         copy_repository_path: /opt/project
         commands: |
           sudo apt-get update
