--- a/.github/workflows/c-cpp-arm.yml
+++ b/.github/workflows/c-cpp-arm.yml
@@ -1,12 +1,41 @@
-name: ci
+name: Emulate RPi and Print Hello World
 
-on:
+on: 
   push:
 
 jobs:
-  qemu:
+  setup-and-emulate-rpi:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
+      - name: Install qemu-system-arm
+        run: sudo apt-get update && sudo apt-get install -y qemu-system-arm
+
+      - name: Prepare emulation environment
+        run: |
+          mkdir -p ~/Projects/rpitest
+          git clone https://github.com/dhruvvyas90/qemu-rpi-kernel.git ~/qemu-rpi-kernel
+          # Assuming using default kernel and dtb files
+          cp ~/qemu-rpi-kernel/kernel-qemu-4.19.50-buster ~/Projects/rpitest/kernel-qemu
+          cp ~/qemu-rpi-kernel/versatile-pb.dtb ~/Projects/rpitest/
+          # Download and prepare Raspbian image - this step would require you to host your image somewhere accessible
+          curl -L -o ~/Projects/rpitest/raspbian-stretch.img 'URL_TO_YOUR_RASPBIAN_IMAGE'
+          OFFSET=$(sudo fdisk -l ~/Projects/rpitest/raspbian-stretch.img | grep Linux | awk '{print $2 * 512}')
+          sudo mount -o offset=$OFFSET ~/Projects/rpitest/raspbian-stretch.img /mnt
+          sudo sed -i 's/^/#/' /mnt/etc/ld.so.preload
+          sudo umount /mnt
+          mv ~/Projects/rpitest/raspbian-stretch.img ~/Projects/rpitest/rpitest.img
+          qemu-img convert -f raw -O qcow2 ~/Projects/rpitest/rpitest.img ~/Projects/rpitest/rpitest.qcow2
+
+      - name: Run Emulated RPi and Print Hello World
+        run: |
+          echo '#!/usr/bin/env bash' > ~/Projects/rpitest/rpistart.sh
+          echo 'sudo qemu-system-arm -kernel ~/Projects/rpitest/kernel-qemu -cpu arm1176 -m 256 -M versatilepb -dtb ~/Projects/rpitest/versatile-pb.dtb -no-reboot -serial stdio -append "root=/dev/sda2 panic=1 rootfstype=ext4 rw" -hda ~/Projects/rpitest/rpitest.qcow2 -net nic -net user -net tap,ifname=vnet0,script=no,downscript=no' >> ~/Projects/rpitest/rpistart.sh
+          chmod +x ~/Projects/rpitest/rpistart.sh
+          (cd ~/Projects/rpitest && ./rpistart.sh &) | grep -m1 "Raspbian GNU/Linux"
+          echo "Hello World"
